--- a/src-docs/templates/header.njk
+++ b/src-docs/templates/header.njk
@@ -1,7 +1,9 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav">
             <div class="container px-4">
-                <a class="navbar-brand" href="index.html">OpenA11y Evaluation Library 2.0</a>
+                <a class="navbar-brand" href="index.html" aril-label="Open Web Accessibility">
+                    <span class="icon"><span class="open">O</span><span class="web">W</span><span class="a11y">A</span></span>
+                </a>
 
                 <button class="navbar-toggler"
                         type="button"
