--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -5,10 +5,7 @@
         <script src="js/scripts.js"></script>
 
         <!-- OpenA11y JS -->
-        <script src="js/opena11y.js"></script>
-
-        <!-- Rule Link JS -->
-        <script src="js/rulelinks.js"></script>
+        <script src="js/owa.js"></script>
 
         <!-- SkipTo.js -->
         <script data-skipto="displayOption: fixed; fontSize: 90%" src="https://skipto-landmarks-headings.github.io/page-script-5/dist/skipto.min.js"></script>
