--- a/docs/css/owa.css
+++ b/docs/css/owa.css
@@ -1,59 +1,39 @@
-h2.rules {
-  font-size: 1.5em;
+
+.brand {
+  display: inline-block;
+  font-family: "Fjalla One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-h3.rules {
-  font-size: 1.1em;
+.brand span {
+  padding: 0.25em;
 }
 
-#main-section {
-  margin-top: 1em;
+.brand .open {
+  display: inline-block;
+  color: #13294B;
+  background: #dddddd;
 }
 
-#home {
-  margin-top:  2em;
+.brand .web {
+  display: inline-block;
+  color: #ffffff;
+  background: #C5050C;
 }
 
-.desc {
-  font-style: italic;
+.brand .a11y {
+  display: inline-block;
+  color: #ffffff;
+  background: #13294B;
 }
 
-nav.rules {
-  margin-bottom: 2em;
-}
-
-nav.rules [aria-current] {
-  text-decoration: none;
-  color: black;
-}
-
-nav.rules a.disabled {
-  color: gray;
-  text-decoration: none;
-  pointer-events: none;
-  cursor: default;
+.text-blue {
+  color: #005797;
 }
 
 nav ol.breadcrumb {
   padding-left:  0;
-}
-
-table.rule-info th {
-  width: 8em;
-}
-
-table.rule-info td ul {
-  padding-left: 1.1em;
-}
-
-table.table {
-  margin-bottom: 1.5em;
-}
-
-table.table-striped > tbody > tr.total th,
-table.table-striped > tbody > tr.total td {
-  border-top-color: #aaa;
-  border-top-width: 2px;
 }
 
 footer {
