--- a/src-docs/templates/content-resources.njk
+++ b/src-docs/templates/content-resources.njk
@@ -19,25 +19,37 @@
           {% block title %}
           <h1>{{title}}</h1>
           {% endblock %}
-          <div id="services">
+          <div id="resources">
 
-            <h2>Workshops</h2>
+            <h2>W3C Web Accessibility Initiative</h2>
 
-            <p>Something about workshops...</p>
+            <p>Something about WAI...</p>
 
-            <h2>Consulting</h2>
+            <h2>Describing Images</h2>
 
-            <p>Something about consulting...</p>
+            <p>Something about describing images....</p>
 
-            <h2>Supporting Accessibility Standards</h2>
+            <h2>Captioning</h2>
 
-            <p>Something about supporting accessibility standards...</p>
+            <p>Something about captioning...</p>
+
+            <h2>Audio Descriptions</h2>
+
+            <p>Something about audio descriptions...</p>
+
+            <h2>Digital Book Accessibility</h2>
+
+            <p>Something about digital book accessibility...</p>
+
+            <h2>PDF Document Accessibility</h2>
+
+            <p>Something about PDF accessibility...</p>
 
 
           </div>
         </div>
       </main>
-    </div>
+    </nav>
     {% include "./footer.njk" %}
     {% include "./scripts.njk" %}
 
