--- a/src-docs/templates/footer.njk
+++ b/src-docs/templates/footer.njk
@@ -1,6 +1,6 @@
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Open Web Accessibility Consulting 2024</p></div>
+        <footer class="py-5 bg-light">
+            <div class="container px-4"><p class="m-0 text-center text-blue">Copyright &copy; Open Web Accessibility Consulting 2024</p></div>
         </footer>
 
 
