--- a/src-docs/templates/header.njk
+++ b/src-docs/templates/header.njk
@@ -1,8 +1,8 @@
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
             <div class="container px-4">
                 <a class="navbar-brand" href="index.html" aril-label="Open Web Accessibility">
-                    <span class="icon"><span class="open">O</span><span class="web">W</span><span class="a11y">A</span></span>
+                    <span class="brand"><span class="open">Open</span><span class="web">Web</span><span class="a11y">A11y</span></span>
                 </a>
 
                 <button class="navbar-toggler"
@@ -19,8 +19,13 @@
                         <li class="nav-item">
                           <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
+
                         <li class="nav-item">
                           <a class="nav-link" href="services.html">Services</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link" href="resources.html">Resources</a>
                         </li>
 
                         <li class="nav-item dropdown">
