--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -8,4 +8,6 @@
         <script src="js/owa.js"></script>
 
         <!-- SkipTo.js -->
-        <script data-skipto="displayOption: fixed; fontSize: 90%" src="https://skipto-landmarks-headings.github.io/page-script-5/dist/skipto.min.js"></script>
+        <script data-skipto="displayOption: fixed; fontSize: 90%"
+                src="https://skipto-landmarks-headings.github.io/page-script-5/dist/skipto.min.js">
+        </script>
