--- a/src-docs/templates/content-index.njk
+++ b/src-docs/templates/content-index.njk
@@ -6,10 +6,27 @@
   <body>
     {% include "./header.njk" %}
     <!-- Header-->
-    <header class="bg-primary bg-gradient text-white">
-        <div class="container px-4 text-center">
-            <h1 class="fw-bolder">{{title}}</h1>
-            <p class="lead"></p>
+    <header text-white">
+        <div class="container px-4">
+          <h1 aria-label="Open Web Accessibiliry Consulting">
+            <svg viewBox="0 0 220 55" xmlns="http://www.w3.org/2000/svg" role="none">
+              <g class="brand">
+                <g class="open">
+                  <rect x="0"  y="5" width="28" height="52"/>
+                  <text x="-47" y="18"transform="rotate(-90)">Open</text>
+                </g>
+                <g class="web">
+                  <rect x="27"  y="5" width="210" height="25"/>
+                  <text x="30"  y="24">Web</text>
+                </g>
+                <g class="a11y">
+                  <rect x="27"  y="30" width="210" height="27"/>
+                  <text x="30"  y="50">Accessibility Consulting</text>
+                </g>
+              </g>
+            </svg>
+          </h1>
+          <p class="lead">Improving the experience of people with disabilities using the <em>web</em> through the use of accessibility standards and best practices.</p>
         </div>
     </header>
 
