--- a/src-docs/templates/header.njk
+++ b/src-docs/templates/header.njk
@@ -1,7 +1,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
             <div class="container px-4">
-                <a class="navbar-brand" href="index.html" aril-label="Open Web Accessibility">
+                <a class="navbar-brand" href="index.html" aria-label="Open Web Accessibility">
                     <span class="brand"><span class="open">Open</span><span class="web">Web</span><span class="a11y">A11y</span></span>
                 </a>
 
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="mainNavbar">
                   <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                          <a class="nav-link" href="index.html">Home</a>
                         </li>
 
                         <li class="nav-item">
@@ -55,3 +55,4 @@
                 </div>
             </div>
         </nav>
+
