update footer and banner

--- a/src-docs/templates/content-index.njk
+++ b/src-docs/templates/content-index.njk
@@ -21,12 +21,13 @@
                 </g>
                 <g class="a11y">
                   <rect x="25"  y="30" width="210" height="27"/>
-                  <text x="28"  y="50">Accessibility Consulting</text>
+                  <text x="28"  y="50">Accessibility</text>
                 </g>
               </g>
             </svg>
           </h1>
-          <p class="lead">Improving the experience of people with disabilities using the <em>web</em> through the use of accessibility standards and best practices.</p>
+          <p class="lead">Learning and consulting services to improve the experience of people with disabilities using the web through the use of accessibility standards and best practices.</p>
+
         </div>
     </header>
 
