--- a/src-docs/templates/owa.scss
+++ b/src-docs/templates/owa.scss
@@ -66,9 +66,13 @@ svg .brand .a11y text {
 }
 
 .lead {
-  font-size: 1.1em;
-  color: black;
+  font-size: 1.5em;
   font-style: italic;
+}
+
+blockquote {
+  margin: 1em 15%;
+  text-align: center;
 }
 
 .text-blue {
