--- a/src-docs/templates/footer.njk
+++ b/src-docs/templates/footer.njk
@@ -5,8 +5,8 @@
              <div class="fst-italic">Tim Berners-Lee, W3C Founding Director and inventor of the World Wide Web, 2009</div>
             </blockquote>
 
-            <div class="container px-4 text-center">Open Web Accessibility, LLC</div>
-            <div class="container px-4 text-center">Learning and Consulting Services on Web Accessibility</div>
+            <div class="container px-4 text-center">Open Web Accessibility Services, LLC</div>
+            <div class="container px-4 text-center">Educational and Consulting Services on Web Accessibility</div>
         </footer>
 
 
