--- a/src-docs/templates/content-index.njk
+++ b/src-docs/templates/content-index.njk
@@ -26,7 +26,7 @@
               </g>
             </svg>
           </h1>
-          <p class="lead">Jon Gunderson is committed to helping people learning and use web accessibility standards to improve the experience of people with disabilities using the web.</p>
+          <p class="lead">Jon Gunderson is committed to helping people learn and use W3C web accessibility standards to improve the experience of people with disabilities using the web.</p>
 
         </div>
     </header>
