--- a/src-docs/templates/content-about.njk
+++ b/src-docs/templates/content-about.njk
@@ -26,7 +26,7 @@
               <img src="images/headshot-jon-gunderson.jpg" width="30%" alt="picture of jon gunderson">
             </p>
 
-            <h2>Jon Gunderson, Ph.D.</h2>
+            <h2>Jon Gunderson, Ph.D., <abbr title="Certified Web Accessibility Professional">CWAP</abbr></h2>
 
             <p>Dr. Gunderson has over 30 years experience in technology and disability.  He most recently served as the Coordinator of Accessible IT Group in the Division of Disability Resources and Education Services (DRES) at the University of Illinois in Champaign/Urbana.  At Illinois he was responsible for helping the campus understand the accessibility issues of its online administrative and instructional resources and worked with campus IT professionals and instructors to improve accessibility.  As an undergraduate and graduate student he worked at the Trace Research and Development Center on communication devices and computer access technologies for people with disabilities, including many of the precursors to the built-in accessibility features of modern operating systems.</p>
 
