--- a/src-docs/templates/content-index.njk
+++ b/src-docs/templates/content-index.njk
@@ -21,7 +21,7 @@
                 </g>
                 <g class="a11y">
                   <rect x="25"  y="30" width="210" height="27"/>
-                  <text x="28"  y="50">Accessibility</text>
+                  <text x="28"  y="50">Accessibility Services</text>
                 </g>
               </g>
             </svg>
