--- a/docs/css/owa.css
+++ b/docs/css/owa.css
@@ -89,6 +89,7 @@ a[href]:hover {
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
   color: #005797;
+  outline-color: #005797;
 }
 
 .breadcrumb a[aria-current],
