--- a/src-docs/templates/owa.scss
+++ b/src-docs/templates/owa.scss
@@ -96,6 +96,7 @@ a[href]:hover {
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
   color: $contentBlue;
+  outline-color: $contentBlue;
 }
 
 .breadcrumb a[aria-current],
