updated skipto button position

--- a/src-docs/templates/content-index.njk
+++ b/src-docs/templates/content-index.njk
@@ -6,9 +6,10 @@
   <body>
     {% include "./header.njk" %}
     <!-- Header-->
-    <header text-white">
+    <header>
         <div class="container px-4">
-          <h1 aria-label="Open Web Accessibiliry Consulting">
+
+          <h1 aria-label="Open Web Accessibility Consulting">
             <svg viewBox="0 0 220 55" xmlns="http://www.w3.org/2000/svg" role="none">
               <g class="brand">
                 <g class="open">
@@ -26,6 +27,7 @@
               </g>
             </svg>
           </h1>
+
           <p class="lead">Jon Gunderson is committed to helping people learn and use W3C web accessibility standards to improve the experience of people with disabilities using the web.</p>
 
         </div>
