--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -8,7 +8,7 @@
         <script src="js/owa.js"></script>
 
         <!-- SkipTo.js -->
-        <script data-skipto="positionLeft: 35%"
+        <script data-skipto="colorTheme: openweba11y; positionLeft: 35%"
                 src="https://skipto-landmarks-headings.github.io/page-script-5/dist/skipto.min.js">
         </script>
 
