--- a/src-docs/templates/content-resources.njk
+++ b/src-docs/templates/content-resources.njk
@@ -8,7 +8,7 @@
 
     <!-- Main section-->
     <div id="main-section" class="container px-4">
-      <nav aria-label="breadcrumb">
+      <nav aria-label="Breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
           <li class="breadcrumb-item active">{{title | safe}}</li>
