--- a/src-docs/templates/footer.njk
+++ b/src-docs/templates/footer.njk
@@ -7,6 +7,8 @@
 
             <div class="container px-4 text-center">Open Web Accessibility Services, LLC</div>
             <div class="container px-4 text-center">Educational and Consulting Services on Web Accessibility</div>
+
+            <div class="container px-4 text-center">Website conformance to <a href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a> requirements supported using <a href="https://ainspector.disability.illinois.edu">AInspector browser addon</a>.</div>
         </footer>
 
 
