--- a/src-docs/templates/header.njk
+++ b/src-docs/templates/header.njk
@@ -1,5 +1,7 @@
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light"
+             aria-label="Primary"
+             id="mainNav">
             <div class="container px-4">
                 <a class="navbar-brand" href="index.html" aria-label="Open Web Accessibility">
                     <span class="brand"><span class="open">Open</span><span class="web">Web</span><span class="a11y">A11y</span></span>
