updated contact form

--- a/src-docs/templates/content-resources.njk
+++ b/src-docs/templates/content-resources.njk
@@ -21,21 +21,37 @@
           {% endblock %}
           <div id="resources">
 
-            <h2>W3C Web Accessibility Initiative</h2>
+            <h2>Accessibility Standards</h2>
 
-            <p>Something about WAI...</p>
+            <ul>
+              <li><a href="https://www.access-board.gov/ict/">Section 508: Information and Communication Technology</a></li>
+              <il><a href="https://www.w3.org/TR/WCAG21/">Web Content Accessibility Guidelines (WCAG) 2.1</a></il>
+            </ul>
 
             <h2>Describing Images</h2>
 
-            <p>Something about describing images....</p>
+            <p>Something about describing image ...</p>
+
+            <ul>
+              <li><a href=""></a></li>
+            </ul>
 
             <h2>Captioning</h2>
 
             <p>Something about captioning...</p>
 
+            <ul>
+              <li><a href=""></a></li>
+            </ul>
+
             <h2>Audio Descriptions</h2>
 
             <p>Something about audio descriptions...</p>
+
+            <ul>
+              <li><a href=""></a></li>
+            </ul>
+
 
             <h2>Digital Book Accessibility</h2>
 
