--- a/src-docs/templates/head.njk
+++ b/src-docs/templates/head.njk
@@ -12,4 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 
+    <!-- Contact Button -->
+    <script src="js/contact-button.js"></script>
+
 
