--- a/src-docs/templates/content-about.njk
+++ b/src-docs/templates/content-about.njk
@@ -26,6 +26,10 @@
               <img src="images/headshot-jon-gunderson.jpg" width="30%" alt="picture of jon gunderson">
             </p>
 
+            <contact-button data-button-class="button">
+              <span slot="label">Contact Jon Gunderson</span>
+            </contact-button>
+
             <h2>Jon Gunderson, Ph.D., <abbr title="Certified Web Accessibility Professional">CWAP</abbr></h2>
 
             <p>Dr. Gunderson has over 35 years of experience in technology and disability.  He most recently served as the Coordinator of Accessible IT Group in the Division of Disability Resources and Education Services (DRES) at the University of Illinois in Champaign/Urbana for over 25 years.  At Illinois he was responsible for helping the campus understand the accessibility issues of its online administrative and instructional resources and worked with campus IT professionals and instructors to improve accessibility.  As an undergraduate and graduate student he worked at the Trace Research and Development Center on assistive communication devices and computer access technologies for people with disabilities, including many of the precursors to the built-in accessibility features of modern operating systems.</p>
@@ -50,7 +54,7 @@
                 </ul>
               </li>
               <li>Support the best practices for implementing accessible online resources.</li>
-              <li>Develop open-source for anyone to freely use in their own projects.</li>
+              <li>Develop open-source web accessibility tools for anyone to freely use to understand the accessibility of their online resources.</li>
             </ul>
 
           </div>
