--- a/docs/css/contact-button.css
+++ b/docs/css/contact-button.css
@@ -11,7 +11,8 @@ button#contact-button {
   text-align: center;
 }
 
-button#contact-button:focus {
+button#contact-button:focus,
+button#contact-button:hover {
   outline: 2px solid #13294B;
 }
 
