updated tools and services

--- a/src-docs/templates/content-services.njk
+++ b/src-docs/templates/content-services.njk
@@ -23,12 +23,58 @@
 
             <h2>Workshops</h2>
 
-            <p>Something about workshops...</p>
+            <p>Building an inclusive online resources requires understanding the experience of people with disabilities using the web. My workshops provide a foundation for understanding the diverse ways people with disabilities use the web and the technologies and practices to provide equitable access. Participants gain important context to understanding the requirements of the W3C Web Content Accessibility Guidelines (WCAG) which is the basis of all web accessibility standards. Without the experiential context many of the WCAG requirements are often misunderstood leading to wasted time by content creators and inaccessible content to users.  Workshops can be customized to a particular clients needs and skill levels.</p>
 
-            <h2>Consulting</h2>
+            <h3>Example Workshop Sessions:</h3>
+            <ul>
+              <li>The Experience of Disability</li>
+              <li>Structure, Links, Images, Media and Web Editors</li>
+              <li>Introduction to ARIA</li>
+              <li>Understanding ARIA and Keyboard Support</li>
+            </ul>
 
-            <p>Something about consulting...</p>
+            <h3>Costs</h3>
 
+            <table aria-label="Workshop Costs" class="table table-striped" style="margin-bottom: 3em">
+              <thead>
+                <tr>
+                    <th>Days</th>
+                    <th>Education</th>
+                    <th>Government</th>
+                    <th>Commercial</th>
+                    <th>Travel</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="text-center">1</td>
+                  <td class="text-center">$1,800</td>
+                  <td class="text-center">$1,800</td>
+                  <td class="text-center">$2,200</td>
+                  <td><em>+ travel expenses</em></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td class="text-center">2</td>
+                  <td class="text-center">$3,200</td>
+                  <td class="text-center">$3,200</td>
+                  <td class="text-center">$3,800</td>
+                  <td><em>+ travel expenses</em></td>
+                </tr>
+              </tbody>
+            </table>
+
+            <contact-button data-button-class="button" >
+              <span slot="label">Contact Jon Gunderson about Workshops</span>
+            </contact-button>
+
+
+            <h2 style="margin-top: 2em">Consulting and Mentoring</h2>
+
+            <p></p>
+
+            <h3>Rates</h3>
+            <p>$60/hour</p>
 
           </div>
         </div>
