--- a/src-docs/templates/owa.scss
+++ b/src-docs/templates/owa.scss
@@ -131,7 +131,10 @@ a[href]:hover {
   color: $linkCurrent;
 }
 
-.tab-pane {
+.tab-panel {
   margin-top: 1em;
 }
 
+main h3 {
+  font-size: 125%;
+}
