updated services page

--- a/src-docs/templates/content-services.njk
+++ b/src-docs/templates/content-services.njk
@@ -64,7 +64,7 @@
               </tbody>
             </table>
 
-            <contact-button data-button-class="button" >
+            <contact-button data-button-class="button" data-interest="workshop" >
               <span slot="label">Contact Jon Gunderson about Workshops</span>
             </contact-button>
 
@@ -73,8 +73,12 @@
 
             <p></p>
 
-            <h3>Rates</h3>
-            <p>$60/hour</p>
+            <h3 >Rates</h3>
+            <p style="margin-bottom: 3em">$60/hour</p>
+
+            <contact-button data-button-class="button" data-interest="consulting" >
+              <span slot="label">Contact Jon Gunderson about Consulting</span>
+            </contact-button>
 
           </div>
         </div>
