--- a/src-docs/templates/content-tools.njk
+++ b/src-docs/templates/content-tools.njk
@@ -17,7 +17,7 @@
       <main class="row gx-4 justify-content-center">
         <div class="col-lg-8">
           {% block title %}
-          <h1>{{title}}</h1>
+          <h1>Open-Source Tools</h1>
           {% endblock %}
           <div id="projects">
 
