--- a/src-docs/templates/header.njk
+++ b/src-docs/templates/header.njk
@@ -23,7 +23,11 @@
                         </li>
 
                         <li class="nav-item">
-                          <a class="nav-link" href="services.html">Services</a>
+                          <a class="nav-link" href="workshops.html">Workshops</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link" href="consulting.html">Consulting</a>
                         </li>
 
                         <li class="nav-item">
