updated tools page

--- a/src-docs/templates/content-about.njk
+++ b/src-docs/templates/content-about.njk
@@ -22,7 +22,7 @@
 
           <div id="about">
 
-            <p>
+            <p style="margin-bottom: 1.5em">
               <img src="images/headshot-jon-gunderson.jpg" width="30%" alt="picture of jon gunderson">
             </p>
 
@@ -30,7 +30,7 @@
               <span slot="label">Contact Jon Gunderson</span>
             </contact-button>
 
-            <h2>Jon Gunderson, Ph.D., <abbr title="Certified Web Accessibility Professional">CWAP</abbr></h2>
+            <h2 style="margin-top: 0.5em">Jon Gunderson, Ph.D., <abbr title="Certified Web Accessibility Professional">CWAP</abbr></h2>
 
             <p>Dr. Gunderson has over 35 years of experience in technology and disability.  He most recently served as the Coordinator of Accessible IT Group in the Division of Disability Resources and Education Services (DRES) at the University of Illinois in Champaign/Urbana for over 25 years.  At Illinois he was responsible for helping the campus understand the accessibility issues of its online administrative and instructional resources and worked with campus IT professionals and instructors to improve accessibility.  As an undergraduate and graduate student he worked at the Trace Research and Development Center on assistive communication devices and computer access technologies for people with disabilities, including many of the precursors to the built-in accessibility features of modern operating systems.</p>
 
