--- a/src-docs/templates/content-tools.njk
+++ b/src-docs/templates/content-tools.njk
@@ -23,15 +23,64 @@
 
             <h2 id="library">OpenA11y Evaluation Library</h2>
 
-            <p><a href="https://opena11y.github.io/evaluation-library/">Javascript library for evaluating WCAG 2.x and ARIA conformance</a>. The library is designed to be used in browser extensions or browser emulators to evaluate accessibility features and issues of web pages. The evaluation results can be accessed through APIs or exporting the results in a JSON format.</p>
+            <p>Javascript library for evaluating WCAG 2.x and ARIA conformance. The library is designed to be used in browser extensions or browser emulators to evaluate accessibility features and issues of web pages. The evaluation results can be accessed through APIs or exporting the results in a JSON format.</p>
+
+            <ul>
+              <li>
+                <a href="https://opena11y.github.io/evaluation-library/">
+                  Evaluation Library Documentation
+                </a>
+              </li>
+              <li>
+                <a href="https://opena11y.github.io/evaluation-library/rulesets.html">
+                  Rulesets and Rules
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/opena11y/evaluation-library?tab=readme-ov-file">
+                  Evaluation Library Source Code
+                </a>
+              </li>
+            </ul>
 
             <h2 id="ainspector">AInspector for Firefox</h2>
 
-            <p><a href="https://ainspector.disability.illinois.edu/">AInspector for Firefox</a> is an <a href="https://github.com/opena11y/ainspector-for-firefox">open source add-on for the Firefox browser</a> that, when activated, automatically analyzes the page loaded in the active tab for compliance with accessibility requirements defined by the World Wide Web Consortium (W3C), and for proper use of accessibility features defined by the current HTML Standard (previously known as HTML5).  There is at least one <a href="https://opena11y.github.io/evaluation-library/rules-gl.html">rule for each WCAG level A and AA requirement</a>.</p>
+            <p>AInspector for Firefox is an open source add-on for the Firefox browser that, when activated, automatically analyzes the page loaded in the active tab for compliance with accessibility requirements defined by the World Wide Web Consortium (W3C), and for proper use of accessibility features defined by the current HTML Standard (previously known as HTML5).  There is at least one rule for each WCAG level A and AA requirement.</p>
+
+            <ul>
+              <li>
+                <a href="https://ainspector.disability.illinois.edu/">
+                  AInspector Documentation
+                </a>
+              </li>
+              <li>
+                <a href="https://opena11y.github.io/evaluation-library/rulesets.html">
+                  Rulesets and Rules
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/opena11y/ainspector-for-firefox/">
+                  AInspector Source Code
+                </a>
+              </li>
+            </ul>
 
             <h2 id="skipto">SkipTo.js</h2>
 
-            <p>The <a href="https://skipto-landmarks-headings.github.io/page-script-5/">SkipTo.js</a> Script is a replacement for the old school “Skip To Main” link, (so please use it as such)! The SkipTo script creates a drop-down menu consisting of the links to important landmarks and headings on a given web page. Once installed and configured, the menu makes it easier for keyboard, voice recognition and screen reader users to quickly jump to the desired location by simply choosing it from the list of options.</p>
+            <p>The SkipTo.js script is a replacement for the old school “Skip To Main” link, (so please use it as such)! The SkipTo script creates a drop-down menu consisting of the links to important landmarks and headings on a given web page. Once installed and configured, the menu makes it easier for keyboard, voice recognition and screen reader users to quickly jump to the desired location by simply choosing it from the list of options.</p>
+
+            <ul>
+              <li>
+                <a href="https://skipto-landmarks-headings.github.io/page-script-5/">
+                  SkipTo.js Documentation
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/skipto-landmarks-headings/page-script-5">
+                  SkipTo.js Source Code
+                </a>
+              </li>
+            </ul>
 
           </div>
         </div>
