--- a/src-docs/templates/head.njk
+++ b/src-docs/templates/head.njk
@@ -6,13 +6,13 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="./css/owa.css" rel="stylesheet" />
+    <link href="{{path}}css/owa.css" rel="stylesheet" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 
     <!-- Contact Button -->
-    <script src="js/contact-button.js"></script>
+    <script src="{{path}}js/contact-button.js"></script>
 
 
