--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -2,10 +2,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{{path}}js/scripts.js"></script>
 
         <!-- OpenA11y JS -->
-        <script src="js/owa.js"></script>
+        <script src="{{path}}js/owa.js"></script>
 
         <!-- SkipTo.js -->
         <script data-skipto="colorTheme: openweba11y; positionLeft: 30%"
