--- a/docs/css/html-slides.css
+++ b/docs/css/html-slides.css
@@ -39,8 +39,8 @@ summary {
 
 footer {
     margin: 0;
-    margin-top: 1em;
-    margin-top: 0.25em;
+    margin-top: 3em;
+    margin-bottom: 0.25em;
     padding: 0;
     position: relative;
     height: 2.5em;
