--- a/docs/css/html-slides.css
+++ b/docs/css/html-slides.css
@@ -349,6 +349,10 @@ main .name {
     font-size: 110%;
 }
 
+main figure {
+    text-align: center;
+}
+
 main figcaption {
     margin-top: 0.25em;
     font-size 110%;
