--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -9,6 +9,6 @@
 
         <!-- SkipTo.js -->
         <script data-skipto="colorTheme: openweba11y; positionLeft: 30%"
-                src="https://skipto-landmarks-headings.github.io/page-script-5/dist/skipto.min.js">
+                src="{{path}}js/skipto.js">
         </script>
 
