--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -8,7 +8,7 @@
         <script src="{{path}}js/owa.js"></script>
 
         <!-- SkipTo.js -->
-        <script data-skipto="colorTheme: openweba11y; positionLeft: 30%; displayOption: popup"
+        <script data-skipto="colorTheme: openweba11y; positionLeft: 30%; displayOption: popup-border"
                 src="{{path}}js/skipto.js">
         </script>
 
