--- a/docs/css/test-skipto.css
+++ b/docs/css/test-skipto.css
@@ -6,6 +6,10 @@ button.popup {
   transition: top 0.35s ease;
 }
 
+button.no-touch {
+  touch-action: none;
+}
+
 button.popup.focus,
 button.popup:hover {
   position: fixed;
@@ -18,6 +22,6 @@ output {
   margin-top: 2em;
   display: block;
   border: 1px solid black;
-  width: 20em;
+  width: 30em;
 }
 
