--- a/docs/css/test-skipto.css
+++ b/docs/css/test-skipto.css
@@ -1,21 +1,22 @@
 /* test-skipto.css */
 
-button.popup {
+.popup {
   position: absolute;
   top: -36px;
   transition: top 0.35s ease;
 }
 
-button.no-touch {
-  touch-action: none;
-}
-
-button.popup.focus,
-button.popup:hover {
+.popup.focus,
+.popup:hover {
   position: fixed;
   top: 0;
   display: block;
   transition: left 1s ease;
+}
+
+.popup button {
+  position: sticky;
+  touch-action: none;
 }
 
 output {
