--- a/docs/css/test-skipto.css
+++ b/docs/css/test-skipto.css
@@ -19,11 +19,10 @@
   touch-action: none;
 }
 
-output {
-  margin: 0.25em;
-  margin-left: 0;
-  display: block;
-  border: 1px solid black;
-  width: 30em;
+div.menu {
+  position: absolute;
+  top: 40px;
+  margin: .25em;
+  padding: 0.25em;
+  touch-action: none;
 }
-
