--- a/src-docs/templates/content-tools.njk
+++ b/src-docs/templates/content-tools.njk
@@ -21,24 +21,47 @@
           {% endblock %}
           <div id="projects">
 
-            <h2 id="library">OpenA11y Evaluation Library</h2>
+            <h2 id="h2l">Headings, Landmarks and Links (H2L)</h2>
 
-            <p>Javascript library for evaluating WCAG 2.x and ARIA conformance. The library is designed to be used in browser extensions or browser emulators to evaluate accessibility features and issues of web pages. The evaluation results can be accessed through APIs or exporting the results in a JSON format.</p>
+            <p>Headings, Landmarks and Links is a browser extension for viewing the headings, landmarks and links on a web page.</p>
 
             <ul>
               <li>
-                <a href="https://opena11y.github.io/evaluation-library/">
-                  Evaluation Library Documentation
+                <a href="https://opena11y.github.io/h2l-side-panel/">
+                  Headings, Landmarks and links (H2L) browser extensions
                 </a>
               </li>
               <li>
-                <a href="https://opena11y.github.io/evaluation-library/rulesets.html">
-                  Rulesets and Rules
+                <a href="https://github.com/opena11y/h2l-side-panel">
+                  H2L Source Code
+                </a>
+              </li>
+            </ul>
+
+
+            <h2 id="skipto">SkipTo.js</h2>
+
+            <p>The SkipTo.js was originally available as a script to replace for the "Skip To Main" link and is now available as a browser extension to make keyboard navigation to headings and landmarks available on web page.  <span style="font-family: cursive">Happy Skipping!</span></p>
+
+            <ul>
+              <li>
+                <a href="https://skipto-landmarks-headings.github.io/page-script-5/extensions.html">
+                  SkipTo.js Browser Extensions
                 </a>
               </li>
               <li>
-                <a href="https://github.com/opena11y/evaluation-library?tab=readme-ov-file">
-                  Evaluation Library Source Code
+                <a href="https://skipto-landmarks-headings.github.io/page-script-5/page-script.html">
+                  SkipTo.js Page Script replacement for "Skip To Main" link
+                </a>
+              </li>
+              <li>
+                <a href="https://skipto-landmarks-headings.github.io/page-script-5/bookmarklets.html">
+                  SkipTo.js Bookmarklet
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/skipto-landmarks-headings/page-script-5">
+                  SkipTo.js Source Code
                 </a>
               </li>
             </ul>
@@ -65,23 +88,27 @@
               </li>
             </ul>
 
-            <h2 id="skipto">SkipTo.js</h2>
+            <h2 id="library">OpenA11y Evaluation Library</h2>
 
-            <p>The SkipTo.js script is a replacement for the old school “Skip To Main” link, (so please use it as such)! The SkipTo script creates a drop-down menu consisting of the links to important landmarks and headings on a given web page. Once installed and configured, the menu makes it easier for keyboard, voice recognition and screen reader users to quickly jump to the desired location by simply choosing it from the list of options.</p>
+            <p>Javascript library for evaluating WCAG 2.x and ARIA conformance. The library is designed to be used in browser extensions or browser emulators to evaluate accessibility features and issues of web pages. The evaluation results can be accessed through APIs or exporting the results in a JSON format.</p>
 
             <ul>
               <li>
-                <a href="https://skipto-landmarks-headings.github.io/page-script-5/">
-                  SkipTo.js Documentation
+                <a href="https://opena11y.github.io/evaluation-library/">
+                  Evaluation Library Documentation
                 </a>
               </li>
               <li>
-                <a href="https://github.com/skipto-landmarks-headings/page-script-5">
-                  SkipTo.js Source Code
+                <a href="https://opena11y.github.io/evaluation-library/rulesets.html">
+                  Rulesets and Rules
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/opena11y/evaluation-library?tab=readme-ov-file">
+                  Evaluation Library Source Code
                 </a>
               </li>
             </ul>
-
           </div>
         </div>
       </main>
