--- a/src-docs/templates/scripts.njk
+++ b/src-docs/templates/scripts.njk
@@ -8,7 +8,7 @@
         <script src="{{path}}js/owa.js"></script>
 
         <!-- SkipTo.js -->
-        <script data-skipto="colorTheme: openweba11y; positionLeft: 30%; displayOption: popup"
-                src="{{path}}js/skipto.js">
+        <script data-skipto="colorTheme: openweba11y; positionLeft: 30%;
+                src="https://skipto-landmarks-headings.github.io/page-script-5/dist/skipto.min.js"></script>
         </script>
 
