--- a/src-docs/templates/content-workshops.njk
+++ b/src-docs/templates/content-workshops.njk
@@ -23,12 +23,10 @@
 
             <p>Building an inclusive online resources requires understanding the experience of people with disabilities using the web. My workshops provide a foundation for understanding the diverse ways people with disabilities use the web and the technologies and practices to provide equitable access. Participants gain important context to understanding the requirements of the W3C Web Content Accessibility Guidelines (WCAG) which is the basis of all web accessibility standards. Without the experiential context many of the WCAG requirements are often misunderstood leading to wasted time by content creators and inaccessible content to users.  Workshops can be customized to a particular clients needs and skill levels.</p>
 
-            <h2>Sessions:</h2>
+            <h2>Workshops:</h2>
             <ul>
               <li>The Experience of Disability</li>
-              <li>Structure, Links, Images, Media and Web Editors</li>
-              <li>Forms and Introduction to ARIA</li>
-              <li>ARIA Authoring Practices and Accessible Design</li>
+              <li>Introduction to ARIA Authoring Practices and Accessible Design</li>
               <li><a href="sessions/">Session details</a></li>
             </ul>
 
