updated session information

--- a/src-docs/templates/content-workshops.njk
+++ b/src-docs/templates/content-workshops.njk
@@ -25,8 +25,8 @@
 
             <h2>Workshops:</h2>
             <ul>
-              <li>The Experience of Disability</li>
-              <li>Introduction to ARIA Authoring Practices and Accessible Design</li>
+              <li>The Experience of Disability (1/2 day)</li>
+              <li>Introduction to ARIA Authoring Practices and Accessible Design (1/2 day)</li>
               <li><a href="sessions/">Session details</a></li>
             </ul>
 
@@ -35,7 +35,7 @@
             <table aria-label="Workshop Costs" class="table table-striped" style="margin-bottom: 3em">
               <thead>
                 <tr>
-                    <th>Days</th>
+                    <th>Workshops</th>
                     <th>Education</th>
                     <th>Government</th>
                     <th>Commercial</th>
