updated session information

--- a/src-docs/templates/content-workshops.njk
+++ b/src-docs/templates/content-workshops.njk
@@ -32,7 +32,7 @@
 
             <h2>Costs</h2>
 
-            <p>The costs associated with hosting one or both of the workshops at your educational institution, organization or business.  Please contact Jon Gunderson for more information and scheduling.</p>
+            <p>The costs associated with hosting one or both of the workshops at your educational institution, organization or business.  Please contact Jon Gunderson for more information and scheduling.  NOTE: Workshops can be customized to your individual needs.</p>
 
             <table aria-label="Workshop Costs" class="table table-striped" style="margin-bottom: 3em">
               <thead>
