updated tools section

--- a/src-docs/templates/content-tools.njk
+++ b/src-docs/templates/content-tools.njk
@@ -66,9 +66,9 @@
               </li>
             </ul>
 
-            <h2 id="ainspector">AInspector for Firefox</h2>
+            <h2 id="ainspector">AInspector for WCAG Evaluation</h2>
 
-            <p>AInspector for Firefox is an open source add-on for the Firefox browser that, when activated, automatically analyzes the page loaded in the active tab for compliance with accessibility requirements defined by the World Wide Web Consortium (W3C), and for proper use of accessibility features defined by the current HTML Standard (previously known as HTML5).  There is at least one rule for each WCAG level A and AA requirement.</p>
+            <p>AInspector for WCAG Evaluation is an open source add-on for the Chrome and Firefox browsers that, when activated, automatically analyzes the page loaded in the active tab for compliance with accessibility requirements defined by the W3C Web Content Accessibility Guidelines, and for proper use of accessibility features defined by the current HTML Standard (previously known as HTML5).  There is at least one rule for each WCAG level A and AA requirement.</p>
 
             <ul>
               <li>
